# RocRecon

./: README-en.md  README.md  pyproject.toml
docs/: articulated-authoring.md  asset-generation.md  extending-backends.md  rocm-setup.md
rocrecon/: __init__.py  backend.py  hunyuan3d_backend.py  mesh_to_urdf.py  produce.py  trellis2_backend.py  triposg_backend.py
tests/: test_mesh_to_urdf.py
