[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rocrecon"
version = "0.1.0"
description = "Real2sim asset generation: prompt/image -> sim-ready URDF assets on ROCm"
requires-python = ">=3.10"
dependencies = [
    "trimesh>=4.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
gen = ["torch>=2.0", "pillow>=10.0"]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["rocrecon"]
